--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,28 @@
-.vscode
+
+
+# Distribution / packaging
+.Python
+env/
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+*.pyc
+
 .idea
 .venv
-.pytest*
+.vscode
+.coverage
+htmlcov
+log*.txt
 test.csv
-log.txt
